packages/libs/error-stack/tests/snapshots/test_serialize__full__hook_custom.snap
---
source: tests/test_serialize.rs
expression: report
---
[
  {
    "context": "root error",
    "attachments": [
      Location(
        file: "tests/common/mod.rs",
        line: 4,
        column: 5,
      ),
      "backtrace (1)",
      SpanTrace(
        spans: [
          Metadata(
            fields: [],
            level: "INFO",
            name: "func_b",
            target: "test_serialize::common::snapshots",
            module_path: Some("test_serialize::common::snapshots"),
            file: Some("tests/common/snapshots.rs"),
            line: Some(72),
            type: "span",
          ),
          Metadata(
            fields: [],
            level: "INFO",
            name: "func_a",
            target: "test_serialize::common::snapshots",
            module_path: Some("test_serialize::common::snapshots"),
            file: Some("tests/common/snapshots.rs"),
            line: Some(77),
            type: "span",
          ),
        ],
      ),
      ImplementSerialize(
        a: "example",
        b: [
          1,
          2,
          3,
        ],
      ),
    ],
    "sources": [],
  },
]
