packages/libs/error-stack/tests/snapshots/test_serialize__full__hook_custom_owned.snap
---
source: tests/test_serialize.rs
expression: report
---
[
  {
    "context": "root error",
    "attachments": [
      {
        "file": "tests/common/mod.rs",
        "line": 4,
        "column": 5
      },
      [
        "   0: std::backtrace_rs::backtrace::libunwind::trace",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/../../backtrace/src/backtrace/libunwind.rs:93:5",
        "   1: std::backtrace_rs::backtrace::trace_unsynchronized",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/../../backtrace/src/backtrace/mod.rs:66:5",
        "   2: std::backtrace::Backtrace::create",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/backtrace.rs:332:13",
        "   3: core::ops::function::FnOnce::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/ops/function.rs:507:5",
        "   4: core::bool::<impl bool>::then",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/bool.rs:71:24",
        "   5: error_stack::report::Report<C>::from_frame",
        "             at ./src/report.rs:284:25",
        "   6: error_stack::report::Report<C>::new",
        "             at ./src/report.rs:270:9",
        "   7: test_serialize::common::create_report",
        "             at ./tests/common/mod.rs:4:5",
        "   8: test_serialize::common::create_error",
        "             at ./tests/common/mod.rs:168:9",
        "   9: test_serialize::common::snapshots::create_report::func_b",
        "             at ./tests/common/snapshots.rs:80:9",
        "  10: test_serialize::common::snapshots::create_report::func_a",
        "             at ./tests/common/snapshots.rs:85:9",
        "  11: core::ops::function::FnOnce::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/ops/function.rs:507:5",
        "  12: test_serialize::common::capture_error",
        "             at ./tests/common/mod.rs:180:5",
        "  13: test_serialize::common::snapshots::create_report",
        "             at ./tests/common/snapshots.rs:88:5",
        "  14: test_serialize::full::hook_custom_owned",
        "             at ./tests/test_serialize.rs:168:22",
        "  15: test_serialize::full::hook_custom_owned::{{closure}}",
        "             at ./tests/test_serialize.rs:156:28",
        "  16: core::ops::function::FnOnce::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/ops/function.rs:507:5",
        "  17: core::ops::function::FnOnce::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/ops/function.rs:507:5",
        "  18: test::__rust_begin_short_backtrace",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/test/src/lib.rs:657:18",
        "  19: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/alloc/src/boxed.rs:2000:9",
        "  20: <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/panic/unwind_safe.rs:271:9",
        "  21: std::panicking::try::do_call",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panicking.rs:483:40",
        "  22: std::panicking::try",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panicking.rs:447:19",
        "  23: std::panic::catch_unwind",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panic.rs:137:14",
        "  24: test::run_test_in_process",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/test/src/lib.rs:680:27",
        "  25: test::run_test::run_test_inner::{{closure}}",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/test/src/lib.rs:574:39",
        "  26: test::run_test::run_test_inner::{{closure}}",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/test/src/lib.rs:601:37",
        "  27: std::sys_common::backtrace::__rust_begin_short_backtrace",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/sys_common/backtrace.rs:121:18",
        "  28: std::thread::Builder::spawn_unchecked_::{{closure}}::{{closure}}",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/thread/mod.rs:550:17",
        "  29: <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/panic/unwind_safe.rs:271:9",
        "  30: std::panicking::try::do_call",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panicking.rs:483:40",
        "  31: std::panicking::try",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panicking.rs:447:19",
        "  32: std::panic::catch_unwind",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/panic.rs:137:14",
        "  33: std::thread::Builder::spawn_unchecked_::{{closure}}",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/thread/mod.rs:549:30",
        "  34: core::ops::function::FnOnce::call_once{{vtable.shim}}",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/core/src/ops/function.rs:507:5",
        "  35: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/alloc/src/boxed.rs:2000:9",
        "  36: <alloc::boxed::Box<F,A> as core::ops::function::FnOnce<Args>>::call_once",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/alloc/src/boxed.rs:2000:9",
        "  37: std::sys::unix::thread::Thread::new::thread_start",
        "             at /rustc/7632db0e87d8adccc9a83a47795c9411b1455855/library/std/src/sys/unix/thread.rs:108:17",
        "  38: __pthread_deallocate"
      ],
      {
        "spans": [
          {
            "fields": [],
            "level": "INFO",
            "name": "func_b",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 78,
            "type": "span"
          },
          {
            "fields": [],
            "level": "INFO",
            "name": "func_a",
            "target": "test_serialize::common::snapshots",
            "module_path": "test_serialize::common::snapshots",
            "file": "tests/common/snapshots.rs",
            "line": 83,
            "type": "span"
          }
        ]
      },
      {
        "a": "example",
        "b": [
          1,
          2,
          3
        ]
      }
    ],
    "sources": []
  }
]
